# Y-star-gov

./: .coverage  .gitignore  .ystar_coverage.json  .ystar_runtime_full_spectrum.cieu.jsonl  .ystar_runtime_six_arm.cieu.jsonl  .ystar_warning_queue.json  .ystar_warning_queue_archive.json  AGENTS.md  ARCHITECTURE_FREEZE_v1.md  CHANGELOG.md  CLAUDE.md  FRAMEWORK_VALIDATION_REPORT_v1.md  HANDOVER_v041.md  README.md  README_k9audit_backup.md  baseline_failures.txt  bench_cache.py  pyproject.toml  run_full_simulation.py  setup.py  test_identity_switch_e2e.py  ystar-0.40.0-py3-none-any.whl  ystar-0.41.0-py3-none-any.whl
.claude/: settings.local.json
.commit_msgs/: c_refactor_labs_names.txt
claude-code-integration/: AGENTS.md  README.md
config/: avoidance_phrases_example.yaml
docs/: CZL-KERNEL-OVERRIDE-PRE-FALLBACK-PHASE2.md  CZL_PRODUCT_DESIGN.md  V5_2_DESIGN_PROPOSAL.md  V5_3_DESIGN_PROPOSAL.md  capability_centerline_binding_governance.md  external_governance_adapter_sdk.md  governance_contract_dry_run.md  governance_endpoint_acceptance.md  governance_local_checks.md  hook_cli_contract_compatibility.md  hook_contract_adapter_dry_run.md  hook_contract_adapter_fixture_matrix.md  hook_contract_cli_dry_run.md  next_experiment_prompt_full_spectrum.md  runtime_linkage_governance.md  v3.2_LAUNCH_READINESS.md  v3_LAUNCH_READINESS.md
examples/: quickstart.py
gov_mcp/: __main__.py  exec_whitelist.yaml  server.py
patches/: hook_wrapper_ppid_fix.py  hook_wrapper_stale_cleanup.py
reports/: CZL-BRAIN-BIPARTITE-P1.md  EXP-006_comprehensive_benchmark.md  EXP-008_final_clean.md  (+1 more)
(+1336 files in other folders)
