[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ystar"
version = "0.41.0"
description = "Runtime Governance Framework for AI Agents"
authors = [{name = "Haotian Liu", email = "liuhaotian2024@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ystar = "ystar._cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
